--- a/css/style.css
+++ b/css/style.css
@@ -131,9 +131,7 @@ ul {
 	margin-right: 10px;
 	fill: currentColor;
 }
-/* .list-contact-item {
-	background-size: cover;
-} */
+
 .list-contact-item:not(:last-child) {
 	margin-right: 50px;
 }
@@ -249,7 +247,7 @@ ul {
 	padding: 200px 0;
 	text-align: center;
 	background-image: linear-gradient(
-			rgba(12, 24, 155, 0.4),
+			rgba(47, 48, 58, 0.4),
 			rgba(47, 48, 58, 0.4)
 		),
 		url("../images/bg.jpg");
@@ -413,9 +411,6 @@ ul {
 	height: 20px;
 	fill: var(--decoration-color);
 }
-.insta {
-	fill: var(--primary-white-color);
-}
 .social-list-link:hover,
 .social-list-link:focus {
 	background-color: var(--accent-color);
@@ -437,6 +432,7 @@ ul {
 }
 
 .clients-list-item {
+	display: flex;
 	width: 170px;
 	height: 92px;
 }
@@ -451,7 +447,10 @@ ul {
 	border-radius: 4px;
 	padding: 16px 32px;
 }
-
+/* .clients-list-icon {
+	width: 106px;
+	height: 60px;
+} */
 .clients-list-link:hover,
 .clients-list-link:focus {
 	border: 1px solid var(--accent-color);
@@ -463,21 +462,13 @@ ul {
 }
 
 .clients-list-icon {
-	width: 106px;
-	height: 60px;
 	fill: var(--decoration-color);
-}
-.current-link {
-	border: 1px solid var(--accent-color);
-}
-.client-current {
-	fill: var(--accent-color);
 }
 /* =========end-studio=========== */
 
 /* ===========portfolio=========== */
 .main-section-portfolio {
-	padding: 94px 15px;
+	padding: 94px 0;
 }
 .list-filtre {
 	display: flex;
@@ -528,6 +519,11 @@ ul {
 }
 .project-item:nth-last-child(-n + 3) {
 	margin-bottom: 0px;
+}
+.project-item:hover,
+.project-item:focus {
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+		1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .portfolio-card-content {
 	display: block;
